정보 합치고 첫커밋!!

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -18,6 +18,8 @@
 # 회원가입 
 /member/writeForm.do=member.service.WriteFormService
 /member/write.do=member.service.WriteService
+/member/write_agree.do=member.service.WriteAgreeService
+
 
 # 아이디중복체크
 /member/checkId.do=member.service.CheckIdService
