로그인 - 아이디/비밀번호 찾기

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -5,6 +5,11 @@
 /member/loginForm.do=member.service.LoginFormService
 /member/login.do=member.service.LoginService
 
+# 아이디/비밀번호 찾기
+/member/findIdPwdForm.do=member.service.FindIdPwdFormService
+/member/findId.do=member.service.FindIdService
+/member/findPwd.do=member.service.FindPwdService
+
 # 로그아웃
 /member/logout.do=member.service.LogoutService
 
@@ -19,7 +24,6 @@
 /member/writeForm.do=member.service.WriteFormService
 /member/write.do=member.service.WriteService
 /member/write_agree.do=member.service.WriteAgreeService
-
 
 # 아이디중복체크
 /member/checkId.do=member.service.CheckIdService
