아이디/비밀번호 수정 완성

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -9,6 +9,7 @@
 /member/findIdPwdForm.do=member.service.FindIdPwdFormService
 /member/findId.do=member.service.FindIdService
 /member/findPwd.do=member.service.FindPwdService
+/member/changePwd.do=member.service.ChangePwdService
 
 # 로그아웃
 /member/logout.do=member.service.LogoutService
