--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -27,3 +27,7 @@
 
 # 아이디중복체크
 /member/checkId.do=member.service.CheckIdService
+
+# 제품관련
+/stock/stockMainForm.do=stock.service.StockMainFormService
+
