DB열결 DB아이디 바꿔서 써주세요! 데이터 넣기

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -27,3 +27,6 @@
 
 # 아이디중복체크
 /member/checkId.do=member.service.CheckIdService
+
+#stockInput
+/stock/stockInput.do=stock.service.StockInputService
