재고관리테이블 update

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -31,6 +31,8 @@
 
 #stockInput
 /stock/stockInput.do=stock.service.StockInputService
+/stock/stockPrint.do=stock.service.StockPrintService
+/stock/UpdateDelete.do=stock.service.StockUpDelService
 
 # 제품관련
 /stock/stockMainForm.do=stock.service.StockMainFormService
