아우터 부분만 예시로 해봤어요

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -1,6 +1,9 @@
 # 메인화면
 /main/index.do=main.service.IndexService
 
+#mainNav
+/mainNav/outer.do=mainNav.service.OuterService
+
 # 로그인
 /member/loginForm.do=member.service.LoginFormService
 /member/login.do=member.service.LoginService
