--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -24,6 +24,9 @@
 /board/qnaWriteForm.do=board.service.QnaWriteFormService
 /board/qnaWrite.do=board.service.QnaWriteService
 
+# 게시판 댓글
+/board/comment.do=board.service.CommentService
+
 # 회원가입 
 /member/writeForm.do=member.service.WriteFormService
 /member/write.do=member.service.WriteService
