--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -26,6 +26,7 @@
 
 # 게시판 댓글
 /board/comment.do=board.service.CommentService
+/board/commentWrite.do=board.service.CommentWriteService
 
 # 회원가입 
 /member/writeForm.do=member.service.WriteFormService
