댓글달기,삭제 완료

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -25,7 +25,7 @@
 /board/qnaWrite.do=board.service.QnaWriteService
 
 # 게시판 댓글
-/board/comment.do=board.service.CommentService
+/board/commentDelete.do=board.service.CommentDeleteService
 /board/commentWrite.do=board.service.CommentWriteService
 
 # 회원가입 
