메인메뉴 수정

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -17,6 +17,17 @@
 # 로그아웃
 /member/logout.do=member.service.LogoutService
 
+# 회원가입 
+/member/writeForm.do=member.service.WriteFormService
+/member/write.do=member.service.WriteService
+/member/write_agree.do=member.service.WriteAgreeService
+
+# 아이디중복체크
+/member/checkId.do=member.service.CheckIdService
+
+# 회원정보수정
+/member/updateForm.do=member.service.UpdateFormService
+
 # Q&A게시판 목록
 /board/qnaList.do=board.service.QnaListService
 
@@ -27,14 +38,6 @@
 # 게시판 댓글
 /board/commentDelete.do=board.service.CommentDeleteService
 /board/commentWrite.do=board.service.CommentWriteService
-
-# 회원가입 
-/member/writeForm.do=member.service.WriteFormService
-/member/write.do=member.service.WriteService
-/member/write_agree.do=member.service.WriteAgreeService
-
-# 아이디중복체크
-/member/checkId.do=member.service.CheckIdService
 
 #stockInput
 /stock/stockInput.do=stock.service.StockInputService
