마이페이지 db전

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -1,6 +1,9 @@
 # 메인화면
 /main/index.do=main.service.IndexService
 
+#마이페이지
+/mypage/mypage.do=mypage.service.MypageService
+
 #mainNav
 /mainNav/outer.do=mainNav.service.OuterService
 
