--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   	<servlet-class>com.control.ControlServlet</servlet-class>
   	<init-param>
   		<param-name>propertyConfig</param-name>
-  		<param-value>C:/Users/downc/git/repository/radiant/src/main/webapp/WEB-INF/command.properties</param-value>
+  		<param-value>C:\java__ee\workspace\radiant\src\main\webapp\WEB-INF\command.properties</param-value>
   	</init-param>
   </servlet>
   <servlet-mapping>
