회원정보수정/탈퇴

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -27,6 +27,11 @@
 
 # 회원정보수정
 /member/updateForm.do=member.service.UpdateFormService
+/member/update.do=member.service.UpdateService
+
+# 회원탈퇴
+/member/deleteForm.do=member.service.DeleteFormService
+/member/delete.do=member.service.DeleteService
 
 # Q&A게시판 목록
 /board/qnaList.do=board.service.QnaListService
