게시판 수정/삭제

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -43,6 +43,13 @@
 /board/qnaWriteForm.do=board.service.QnaWriteFormService
 /board/qnaWrite.do=board.service.QnaWriteService
 
+#Q&A게시판 수정
+/board/qndUpdateForm.do=board.service.QnaUpdateFormService
+/board/qndUpdate.do=board.service.QnaUpdateService
+
+# Q&A게시판 삭제
+/board/qnaDelete.do=board.service.QnaDeleteService
+
 # 게시판 댓글
 /board/commentDelete.do=board.service.CommentDeleteService
 /board/commentWrite.do=board.service.CommentWriteService
