--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -25,8 +25,9 @@
 /member/write.do=member.service.WriteService
 /member/write_agree.do=member.service.WriteAgreeService
 
-# 아이디중복체크
+#중복체크 - 아이디, 핸드폰
 /member/checkId.do=member.service.CheckIdService
+/member/checkPhone.do=member.service.CheckPhoneService
 
 # 회원정보수정
 /member/updateForm.do=member.service.UpdateFormService
@@ -61,4 +62,6 @@
 
 # 제품관련
 /stock/stockMainForm.do=stock.service.StockMainFormService
+
+
 
