메인메뉴추가

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -6,6 +6,9 @@
 
 #mainNav
 /mainNav/outer.do=mainNav.service.OuterService
+/mainNav/top.do=mainNav.service.TopService
+/mainNav/pants.do=mainNav.service.PantsService
+/mainNav/allProduct.do=mainNav.service.AllProductService
 
 # 로그인
 /member/loginForm.do=member.service.LoginFormService
