배송테이블틀만 조금 잡아봤어요..

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -4,6 +4,9 @@
 #마이페이지
 /mypage/mypage.do=mypage.service.MypageService
 
+#주문/배송
+/order/order.do=order.service.OrderService
+
 #mainNav
 /mainNav/outer.do=mainNav.service.OuterService
 /mainNav/top.do=mainNav.service.TopService
