--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -60,8 +60,8 @@
 /stock/stockPrint.do=stock.service.StockPrintService
 /stock/UpdateDelete.do=stock.service.StockUpDelService
 
-# 제품관련
+#제품관련
 /stock/stockMainForm.do=stock.service.StockMainFormService
 
-
-
+#장바구니
+/cart/cart.do=cart.service.CartInsertService
