배송지추가

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -71,3 +71,7 @@
 
 #장바구니
 /cart/cart.do=cart.service.CartInsertService
+
+# 배송지 관리
+/mypage/manageShip.do=mypage.service.ManageShipService
+/mypage/addShipAddrForm.do=mypage.service.AddShipAddrFormService
