배송지 우편번호

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -77,4 +77,5 @@
 /mypage/manageShip.do=mypage.service.ManageShipService
 /mypage/addShipAddrForm.do=mypage.service.AddShipAddrFormService
 /mypage/addShipAddr.do=mypage.service.AddShipAddrService
-/mypage/checkPost.do=mypage.service.CheckPostService
+/mypage/checkPostForm.do=mypage.service.CheckPostFormService
+/mypage/checkPost.do=mypage.service.CkeckPostService
