결제완료페이지

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -6,6 +6,7 @@
 
 #주문/배송
 /order/order.do=order.service.OrderService
+/order/orderComplete.do=order.service.OrderCompleteService
 
 #mainNav
 /mainNav/outer.do=mainNav.service.OuterService
