배송지 추가, 출력

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -76,6 +76,7 @@
 
 # 배송지 관리
 /mypage/manageShip.do=mypage.service.ManageShipService
+/mypage/manageShipPrint.do=mypage.service.ManageShipPrintService
 /mypage/addShipAddrForm.do=mypage.service.AddShipAddrFormService
 /mypage/addShipAddr.do=mypage.service.AddShipAddrService
 /mypage/checkPostForm.do=mypage.service.CheckPostFormService
