기존 배송지 설정

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -81,3 +81,6 @@
 /mypage/addShipAddr.do=mypage.service.AddShipAddrService
 /mypage/checkPostForm.do=mypage.service.CheckPostFormService
 /mypage/checkPost.do=mypage.service.CkeckPostService
+
+# 기본배송지 설정
+/mypage/changeBaseShip.do=mypage.service.ChangeBaseShipService
