배송지 삭제

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -81,3 +81,4 @@
 /mypage/addShipAddr.do=mypage.service.AddShipAddrService
 /mypage/checkPostForm.do=mypage.service.CheckPostFormService
 /mypage/checkPost.do=mypage.service.CkeckPostService
+/mypage/shipAddrDelete.do=mypage.service.ShipAddrDeleteService
