--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -61,6 +61,7 @@
 # 게시판 댓글
 /board/commentDelete.do=board.service.CommentDeleteService
 /board/commentWrite.do=board.service.CommentWriteService
+/board/commentUpdate.do=board.service.CommentUpdateService
 
 #stockInput
 /stock/stockInput.do=stock.service.StockInputService
