배송지 수정

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -81,6 +81,12 @@
 /mypage/addShipAddr.do=mypage.service.AddShipAddrService
 /mypage/checkPostForm.do=mypage.service.CheckPostFormService
 /mypage/checkPost.do=mypage.service.CkeckPostService
+
+# 배송지 수정
+/mypage/shipUpdateForm.do=mypage.service.ShipUpdateFormService
+/mypage/getShip.do=mypage.service.GetShipService
+/mypage/shipUpdate.do=mypage.service.ShipUpdateService
+# 배송지 삭제
 /mypage/shipAddrDelete.do=mypage.service.ShipAddrDeleteService
 
 # 기본배송지 설정
