게시판 댓글 수정

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -7,6 +7,7 @@
 #주문/배송
 /order/order.do=order.service.OrderService
 /order/orderPay.do=order.service.OrderPayService
+/order/getOrderpay.do=order.servive.GetOrderPayService
 /order/orderComplete.do=order.service.OrderCompleteService
 
 #mainNav
