--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -76,6 +76,7 @@
 #장바구니
 /cart/cart.do=cart.service.CartInsertService
 /cart/cartDelete.do=cart.service.CartDeleteService
+/cart/cartPrint.do=cart.service.CartPrintService
 
 # 배송지 관리
 /mypage/manageShip.do=mypage.service.ManageShipService
