--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -78,6 +78,8 @@
 /cart/cart.do=cart.service.CartInsertService
 /cart/cartDelete.do=cart.service.CartDeleteService
 /cart/cartPrint.do=cart.service.CartPrintService
+/cart/cartDeleteAll.do=cart.service.cartDeleteAllService
+/cart/cartAmount.do=cart.service.CartAmountService
 
 # 배송지 관리
 /mypage/manageShip.do=mypage.service.ManageShipService
