결제페이지DB

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -8,6 +8,7 @@
 /order/order.do=order.service.OrderService
 /order/orderPay.do=order.service.OrderPayService
 /order/getOrderpay.do=order.service.GetOrderPayService
+/order/orderPaying.do=order.service.OrderPayingService
 /order/orderComplete.do=order.service.OrderCompleteService
 
 #mainNav
