결제페이지 끝!

--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -11,6 +11,10 @@
 /order/orderPaying.do=order.service.OrderPayingService
 /order/orderComplete.do=order.service.OrderCompleteService
 
+#카트주문
+/order/cartOrderPay.do=order.service.CartOrderPayService
+/order/getCartOrderPay.do=order.service.GetCartOrderPayService
+
 #mainNav
 /mainNav/outer.do=mainNav.service.OuterService
 /mainNav/top.do=mainNav.service.TopService
