--- a/src/main/webapp/WEB-INF/command.properties
+++ b/src/main/webapp/WEB-INF/command.properties
@@ -6,6 +6,7 @@
 
 #주문/배송
 /order/order.do=order.service.OrderService
+/order/getOrder.do=order.service.GetOrderService
 /order/orderPay.do=order.service.OrderPayService
 /order/getOrderpay.do=order.service.GetOrderPayService
 /order/orderPaying.do=order.service.OrderPayingService
